--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
-    "sweetalert2": "^11.4.35",
-    "tailwind": "^4.0.0"
+    "sweetalert2": "^11.4.35"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
