--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tensorflow/tfjs-node": "^3.20.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^3.9.1",
+    "crypto": "^1.0.1",
     "daisyui": "^2.31.0",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
